Fixed carousel alignment

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,15 +1,10 @@
 .carousel {
-    height: 50vmin;
+    height: 70vmin;
     overflow: hidden;
 }
 
 .info-container {
     margin-top: 3em;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-    transform: translateY(-50%);
 }
 
 
